# place.rs

./: .gitignore
client/: Cargo.toml
client/src/: app.rs  config.rs  main.rs  new-old-main.rs  place.rs  websocket.rs
server/: Cargo.toml
server/src/: config.rs  interfaces.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  messages.rs
