[package]
name = "place-rs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
place-rs-shared = { path = "../shared", version = "0.1.0" }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio-tungstenite = { version =  "0.18.0", features = ["native-tls"] }
futures-util = "0.3.25"