[package]
name = "place-rs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
place-rs-shared = { path = "../shared", version = "0.1.0" }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio-tungstenite = { version =  "0.18.0", features = ["native-tls"] }
futures-util = "0.3.25"
anyhow = "1.0.66"
reqwest = {version = "0.11.13", features = ["json"]}
eframe = { version = "0.20.0" }
egui_extras = { version = "0.20.0" }
image = "0.24.5"
async-std = { version = "1.12.0"}
lazy_static = "1.4.0"
dirs = "4.0.0"
poll-promise = {version = "0.2.0", features = ["tokio"]}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_Console"]}