[package]
name = "place-rs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
place-rs-shared = { path = "../shared", version = "0.1.0" }
tokio = { version = "1.14.0", features = ["full"] }
actix = "0.13.0"
actix-web-actors = "4.1.0"
anyhow = "1.0.66"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
async-trait = "0.1.59"
chrono = "0.4.23"
poll-promise = "0.2.0"
# hashing crate
sha2 = "0.10.6"